# the_rover

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
the_rover/: __init__.py  __main__.py
